--- a/live-html/fonts/roboto.css
+++ b/live-html/fonts/roboto.css
@@ -1,3 +1,9 @@
+@font-face {
+ font-family: "helioscond-bold";
+ src: url("helioscond-bold.woff2") format("woff2"); /* Modern Browsers */
+ font-weight: normal;
+ font-style: normal;
+}
 
 @font-face {
     font-family: 'roboto_bkbold';
